Scenario fixes.